[tool.poetry]
name = "pass"
version = "0.1.0"
description = "Code repo for \"PASS: Perturbation Assisted Sample Synthesis --- A Novel Approach For Uncertainty Quantification\""
authors = ["Yifei Liu <liu00980@umn.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {url = "https://download.pytorch.org/whl/cu102/torch-1.12.1%2Bcu102-cp310-cp310-linux_x86_64.whl"}
torchaudio = {url = "https://download.pytorch.org/whl/cu102/torchaudio-0.12.1%2Bcu102-cp310-cp310-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu102/torchvision-0.13.1%2Bcu102-cp310-cp310-linux_x86_64.whl"}
denoising-diffusion-pytorch = {git = "https://github.com/yifei-liu-stat/denoising-diffusion-pytorch.git"}
matplotlib = "^3.8.1"
gdown = "^4.7.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
